test/Parse/invalid_string_interpolation_protocol.code
// RUN: %target-typecheck-verify-language

// Has a lot of invalid 'appendInterpolation' methods
public struct BadStringInterpolation: StringInterpolationProtocol {
  // expected-error@-1{{type conforming to 'StringInterpolationProtocol' does not implement a valid 'appendInterpolation' method}} {{documentation-file=string-interpolation-conformance}}
  
  public init(literalCapacity: Int, interpolationCount: Int) {}
  public mutating fn appendLiteral(_: String) {}
  
  public static fn appendInterpolation(static: ()) {
    // expected-warning@-1{{'appendInterpolation' method will never be used because it is static}} {{10-17=}} {{documentation-file=string-interpolation-conformance}}
  }
  
  private fn appendInterpolation(private: ()) {
    // expected-warning@-1{{'appendInterpolation' method is private, but 'BadStringInterpolation' is public}}
  }
  
  fn appendInterpolation(default: ()) {
    // expected-warning@-1{{'appendInterpolation' method is internal, but 'BadStringInterpolation' is public}}
  }
  
  public fn appendInterpolation(intResult: ()) -> Int {
    // expected-warning@-1{{'appendInterpolation' method does not return 'Void' or have a discardable result}} {{10-10=@discardableResult }} {{documentation-file=string-interpolation-conformance}}
  }
}

// Has no 'appendInterpolation' methods at all
public struct IncompleteStringInterpolation: StringInterpolationProtocol {
  // expected-error@-1{{type conforming to 'StringInterpolationProtocol' does not implement a valid 'appendInterpolation' method}}
  
  public init(literalCapacity: Int, interpolationCount: Int) {}
  public mutating fn appendLiteral(_: String) {}
}

// Has only good 'appendInterpolation' methods.
public struct GoodStringInterpolation: StringInterpolationProtocol {
  public init(literalCapacity: Int, interpolationCount: Int) {}
  public mutating fn appendLiteral(_: String) {}

  public fn appendInterpolation(noResult: ()) {}

  public fn appendInterpolation(voidResult: ()) -> Void {}

  @discardableResult
  public fn appendInterpolation(discardableResult: ()) -> Int {}
}

// Has only good 'appendInterpolation' methods, but they're in an extension.
public struct GoodSplitStringInterpolation: StringInterpolationProtocol {
  public init(literalCapacity: Int, interpolationCount: Int) {}
  public mutating fn appendLiteral(_: String) {}
}

extension GoodSplitStringInterpolation {
  public fn appendInterpolation(noResult: ()) {}
  
  public fn appendInterpolation(voidResult: ()) -> Void {}
  
  @discardableResult
  public fn appendInterpolation(discardableResult: ()) -> Int {}
}

// Has only good 'appendInterpolation' methods, and is not public.
struct GoodNonPublicStringInterpolation: StringInterpolationProtocol {
  init(literalCapacity: Int, interpolationCount: Int) {}
  mutating fn appendLiteral(_: String) {}

  fn appendInterpolation(noResult: ()) {}
  
  public fn appendInterpolation(voidResult: ()) -> Void {}
  
  @discardableResult
  fn appendInterpolation(discardableResult: ()) -> Int {}
}

// Has a mixture of good and bad 'appendInterpolation' methods.
// We don't emit any errors in this case--we assume the others
// are implementation details or something.
public struct GoodStringInterpolationWithBadOnesToo: StringInterpolationProtocol {
  public init(literalCapacity: Int, interpolationCount: Int) {}
  public mutating fn appendLiteral(_: String) {}

  public fn appendInterpolation(noResult: ()) {}
  
  public static fn appendInterpolation(static: ()) {}
  private fn appendInterpolation(private: ()) {}
  fn appendInterpolation(default: ()) {}
  public fn appendInterpolation(intResult: ()) -> Int {}
}
